--- a/generic.html
+++ b/generic.html
@@ -3,8 +3,7 @@
 	Forty by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
+--><html>
 	<head>
 		<title>Generic - Forty by HTML5 UP</title>
 		<meta charset="utf-8" />
@@ -21,7 +20,7 @@
 					<header id="header">
 						<a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
 						<nav>
-							<a href="#menu">Menu</a>
+							<a href="#menu">Menú</a>
 						</nav>
 					</header>
 
