feature-enlaces:actualizados enlaces hacia articulo.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<li><a href="about.html">Sobre nosotros</a></li>
+		<li><a href="articulo.html">Sobre nosotros</a></li>
 	</head>
 	<body class="is-preload">
 
